--- a/windows/CommonSettings.props
+++ b/windows/CommonSettings.props
@@ -12,7 +12,7 @@
     <!-- NOTE: If Python support is enabled, PythonDir (below) needs to be
          set to the root of your Python installation. If your Python installation
          does not contain debug libraries, debug build will not work. -->
-    <PythonSupport>false</PythonSupport>
+    <PythonSupport>true</PythonSupport>
 
     <!-- NOTE: If Matlab support is enabled, MatlabDir (below) needs to be
          set to the root of your Matlab installation. -->
@@ -39,7 +39,7 @@
     <CudaArchitecture>compute_52,sm_52;compute_60,sm_60;</CudaArchitecture>
 
     <!-- CuDNN 3 and 4 are supported -->
-    <CuDnnPath>D:\CUDA\CuDNNv5</CuDnnPath>
+    <CuDnnPath>D:\cudnn_8_win10_x64_v51\cuda</CuDnnPath>
     <ScriptsDir>$(SolutionDir)\scripts</ScriptsDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(CpuOnlyBuild)'=='false'">
@@ -79,7 +79,7 @@
     <IncludePath>$(SolutionDir)..\include;$(SolutionDir)..\include\caffe\proto;$(CUDA_PATH)\include;$(BoostIncludeFolder);$(HDF5Root)\include;$(GFlagsRoot)\include;$(GLogRoot)\include;$(ProtobufRoot)\include;$(OpenCVRoot)\include;$(LMDBRoot)\include;$(LevelDBRoot)\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(PythonSupport)'=='true'">
-    <PythonDir>D:\Anaconda3\</PythonDir>
+    <PythonDir>C:\Users\Administrator\AppData\Local\Programs\Python\Python36</PythonDir>
     <LibraryPath>$(PythonDir)\libs;$(LibraryPath)</LibraryPath>
     <IncludePath>$(PythonDir)\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
